syntax = "proto3";
option go_package = "github.com/treevese/lakefs/catalog";

import "google/protobuf/timestamp.proto";

package catalog;

message Entry {
	string address = 1;
	google.protobuf.Timestamp last_modified = 2;
	int64 size = 3;
	string e_tag = 4;
	map<string,string> metadata = 5;
	enum AddressType {
		// Deprecated.
		// Unknown address type (should only exist for old commits)
		// is resolved (to Relative or Full) by the prefix of the address.
		BY_PREFIX_DEPRECATED = 0;
		RELATIVE = 1;
		FULL = 2;
	}
	AddressType address_type = 6;
	string content_type = 7;
}

message Task {
	string id = 1;
	bool completed = 2;
	google.protobuf.Timestamp updated_at = 3;
	int64 progress = 4;
	//  string metarange_id = 5;
	//  CommitData commit = 6;
	string error = 7;
}

message RefsDumpInfo {
	string commits_metarange_id = 1;
	string tags_metarange_id = 2;
	string branches_metarange_id = 3;
}

message RefsDumpStatus {
	Task task = 1;
	RefsDumpInfo info = 2;
}

message RefsRestoreStatus {
	Task task = 1;
}


